--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>index</title>
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <p>
-      <font size="7"><i><b>PAUL AUGUSTINE</b></i></font><br><br>
-      <img src="old_main.png" style="width:560px;"><br><br>
-    </p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>index</title>
+  <link href="style.css" rel="stylesheet">
+  <script src="time.js"></script>
+</head>
+<body>
+  <p>
+    <font size="7"><i><b>PAUL AUGUSTINE</b></i></font><br><br>
+    <img src="old_main.png" style="width:560px;"><br><br>
+    <i>UNIVERSITY PARK, PA - <span id="time">0:00 AM</span> EST</i><br><br>
+  </p>
+</body>
 </html>
