feat: create contact

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <font size="7"><i><b>PAUL AUGUSTINE</b></i></font><br><br>
     <img src="old_main.png" style="width:560px;"><br><br>
     <i>UNIVERSITY PARK, PA - <span id="time">0:00 AM</span> EST</i><br><br>
+    <a href="https://paulaugustine.dev/contact.html">contact</a>
   </p>
 </body>
 </html>
