feat: create about, create resume

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <i>EMAIL</i><br>
     school - <a href="mailto:pva5278@psu.edu"><i>pva5278@psu.edu</i></a><br>
     personal - <a href="mailto:paul_augustine@outlook.com"><i>paul_augustine@outlook.com</i></a><br><br>
-    <i>MISC</i><br>
+    <i>MISC.</i><br>
     linkedin - <a href="https://www.linkedin.com/in/paugust0"><i>https://www.linkedin.com/in/paugust0</i></a><br>
     github - <a href="https://github.com/paugust0"><i>https://github.com/paugust0</i></a>
   </p>
